<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">卡口系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="close">关闭</string>
    <string name="place">卡口地点</string>
    <string name="fxbh">行驶方向</string>
    <string name="jgsj">经过时间</string>
    <string name="jzmm">记住账号</string>
    <string name="cancle">取消</string>
    <string name="back">返回</string>
    <string name="clear">清空</string>
    <string name="ok">确定</string>
    <string name="start_date">起始时间</string>
    <string name="end_date">结束时间</string>

    <string name="copyright">Copyright © 2015 广东实现科技有限公司. </string>
   <string name="app_version_not_found">-</string>
    
    <!-- 车管所信息 -->
    <string name="hpys">号牌颜色</string>
    <string name="hpzl">号牌种类</string>
    <string name="hphm">号牌号码</string>
    <string name="clpp1">车辆品牌</string>
    <string name="clpp2">车辆子品牌</string>
    <string name="clxh">车辆序号</string>
    <string name="zzcmc">制造厂名称</string>
    <string name="clsbdh">车辆识别码</string>
    <string name="fdjh">发动机号</string>
    <string name="cllx">车辆类型</string>
    <string name="csys">车身颜色</string>
    <string name="syr">所有人</string>
    <string name="fzrq">发证日期</string>
    <string name="title_activity_history_item">HistoryItemActivity</string>
</resources>
