<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/rt_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@color/subtab"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

       <TextView
          android:layout_width="150dp"
		  android:layout_height="match_parent"
		  android:id="@+id/rt_tv_place"
          android:textSize="16sp"
           android:textColor="@drawable/navigatiion_fontcolor_selector"
           android:text="@string/place"
           android:layout_marginLeft="20dp"
           android:gravity="center"
           android:focusable="true"
           />
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/rt_tv_fxhb"
            android:textSize="16sp"
            android:textColor="@drawable/navigatiion_fontcolor_selector"
            android:text="@string/fxbh"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/rt_tv_auto"
            android:layout_width="130dp"
            android:layout_height="35dp"
            android:text="正在刷新中"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_blue_selector"
            android:textColor="@color/white"
            />
        <ImageView
            android:id="@+id/rt_img_waiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/img_waiting"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background"/>
    <LinearLayout
        android:id="@+id/rt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/hphm"
            android:textSize="14sp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/jgsj"
            android:textSize="14sp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/place"
            android:textSize="14sp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/fxbh"
            android:textSize="14sp"
            android:gravity="center"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <com.sx.kakou.tricks.PullLoadMoreRecyclerView
                android:id ="@+id/home_swip"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                >
            </com.sx.kakou.tricks.PullLoadMoreRecyclerView>
        </LinearLayout>


</LinearLayout>
